suse2022-ns/static/css/style.css
/* ... */
.example-title .keycap,
.example-title .literal,
.example-title .package,
.example-title .replaceable,
.example-title code,
.figure-title .keycap,
.figure-title .literal,
.figure-title .package,
.figure-title .replaceable,
.figure-title code,
.itemizedlist-title .keycap,
.itemizedlist-title .literal,
.itemizedlist-title .package,
.itemizedlist-title .replaceable,
.itemizedlist-title code,
.orderedlist-title .keycap,
.orderedlist-title .literal,
.orderedlist-title .package,
.orderedlist-title .replaceable,
.orderedlist-title code,
.procedure-title .keycap,
.procedure-title .literal,
.procedure-title .package,
.procedure-title .replaceable,
.procedure-title code,
.table-title .keycap,
.table-title .literal,
.table-title .package,
.table-title .replaceable,
.table-title code,
.variablelist-title .keycap,
.variablelist-title .literal,
.variablelist-title .package,
.variablelist-title .replaceable,
.variablelist-title code {
  text-transform: none; }

.procedure-contents {
  display: block;
  font-weight: normal;
  margin: 17px 0 17px;
  padding: 3px 5px 6px 2px; }

.procedure-title-wrap + .procedure-contents {
  margin: 10px 0 24px; }

.procedure-contents > ol:first-child > li:first-child > p:first-child,
.procedure-contents > p:first-child {
  margin-top: 0; }

.procedure-contents > .admonition {
  margin-top: 4px; }

.procedure-contents > p,
.procedure-contents > .informalfigure,
.procedure-contents > .admonition {
  margin-left: 12px;
  margin-right: 17px; }

ol.orderedlist, ol.procedure, ol.substeps {
  color: #26915e;
  display: block;
  font-weight: normal; }

ol.procedure {
  margin: 0 10px;
  padding: 0 0 0 30px; }
  ol.procedure .title {
    color: #333;
    font-size: 16px;
    font-weight: 600;
    padding: 0; }

ol.orderedlist, ol.substeps {
  margin: 0 0 0 10px;
  padding: 0 0 0 35px; }

ol.orderedlist, ol.procedure {
  list-style-type: decimal; }

ol.substeps {
  list-style-type: lower-latin; }

.orderedlist-title-wrap + ol.orderedlist {
  margin-top: 40px; }

ul {
  color: #26915e;
  display: block;
  list-style-type: disc;
  margin: 0 10px;
  padding: 5px 0 0 35px; }

.step-optional {
  color: #26915e;
  font-style: italic; }
  .step-optional + p {
    margin-top: 0; }
  .step-optional > p {
    margin: 0 10px 5px; }

div.itemizedlist {
  margin: 0 0 24px; }

li > p {
  font-weight: normal; }

.blockquote p {
  color: #333;
  font-style: italic; }

div.blockquote {
  margin: 17px 35px; }

.tab-structure {
  display: flex;
  border: 1px solid #30ba78;
  flex-direction: column;
  margin-top: 32px;
  margin-bottom: 32px; }
  .tab-structure .tabs {
    display: flex;
    overflow-x: auto;
    padding: 0;
    margin: 0; }
    .tab-structure .tabs .tab {
      cursor: pointer;
      list-style: none;
      padding-top: 8px;
      padding-bottom: 8px;
      padding-left: 16px;
      padding-right: 16px; }
    .tab-structure .tabs .tab.active-tab {
      border-bottom: 3px solid #30ba78;
      color: #0c322c;
      font-size: bold; }
  .tab-structure .content-container {
    background-color: #f6f8fa;
    padding: 8px;
    overflow-x: auto; }

.qandadiv {
  margin: 0 0 40px 0; }

.question {
  font-style: italic; }

.answer {
  padding: 0 0 17px; }
  .answer .table-title,
  .answer .variablelist,
  .answer .verbatim-wrap {
    margin-top: 10px; }

.js-on .question {
  cursor: pointer;
  color: #26915e;
  position: relative; }
  .js-on .question .keycap,
  .js-on .question .literal,
  .js-on .question .package,
  .js-on .question code {
    color: #26915e; }
  .js-on .question:hover, .js-on .question:focus {
    color: #165b50; }
  .js-on .question::before {
    content: '';
    display: inline-block;
    height: 15px;
    margin: 4px 0 0;
    width: 17px;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    background-image: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!-- Font Awesome Free 5.15.3 by @fontawesome, https://fontawesome.com - CC BY 4.0 --><path fill="%2326915e" d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"/></svg>');
    transform: rotate(-90deg);
    transition: transform 0.2s linear; }

.js-on .answer {
  display: none; }

.js-on .qandaentry.active .question {
  color: #0c322c; }
  .js-on .qandaentry.active .question .keycap,
  .js-on .qandaentry.active .question .literal,
  .js-on .qandaentry.active .question .package,
  .js-on .qandaentry.active .question .replaceable,
  .js-on .qandaentry.active .question code {
    color: #333; }
  .js-on .qandaentry.active .question::before {
    transform: rotate(0.01deg);
    background-image: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!-- Font Awesome Free 5.15.3 by @fontawesome, https://fontawesome.com - CC BY 4.0 --><path fill="%230c322c" d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"/></svg>'); }

.js-on .qandaentry.active .answer {
  display: block; }

.js-on br {
  margin-top: 2px; }

.command,
.keycap,
.package,
.replaceable,
code {
  display: inline-block;
  font-weight: normal;
  line-height: 120%;
  padding: 0 4px;
  text-transform: none; }

.command,
.package,
.replaceable,
code {
  font-family: "Roboto Mono", "RobotoMono", "DejaVu Sans Mono", "DejaVuSansMono", "Menlo", "Andale Mono", monospace;
  border-bottom: 1px solid #c0c2c4; }

.verbatim-wrap .command,
.verbatim-wrap .literal,
.verbatim-wrap .package,
.verbatim-wrap .replaceable,
.verbatim-wrap code {
  display: inline; }
/* ... */

